// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`layout snapshots > barycenter-reorder 1`] = `
{
  "edges": [
    {
      "childPort": {
        "side": "left",
        "x": 12,
        "y": 4,
      },
      "parentPort": {
        "side": "right",
        "x": 9,
        "y": 3,
      },
      "ref": {
        "cardinality": "one-to-many",
        "child": {
          "column": "top_id",
          "entity": "x",
        },
        "parent": {
          "column": "id",
          "entity": "top",
        },
      },
      "segments": [
        {
          "kind": "horizontal",
          "x1": 10,
          "x2": 10,
          "y1": 3,
          "y2": 3,
        },
        {
          "kind": "vertical",
          "x1": 10,
          "x2": 10,
          "y1": 3,
          "y2": 4,
        },
        {
          "kind": "horizontal",
          "x1": 10,
          "x2": 11,
          "y1": 4,
          "y2": 4,
        },
      ],
    },
    {
      "childPort": {
        "side": "left",
        "x": 12,
        "y": 11,
      },
      "parentPort": {
        "side": "right",
        "x": 9,
        "y": 10,
      },
      "ref": {
        "cardinality": "one-to-many",
        "child": {
          "column": "bot_id",
          "entity": "y",
        },
        "parent": {
          "column": "id",
          "entity": "bot",
        },
      },
      "segments": [
        {
          "kind": "horizontal",
          "x1": 10,
          "x2": 10,
          "y1": 10,
          "y2": 10,
        },
        {
          "kind": "vertical",
          "x1": 10,
          "x2": 10,
          "y1": 10,
          "y2": 11,
        },
        {
          "kind": "horizontal",
          "x1": 10,
          "x2": 11,
          "y1": 11,
          "y2": 11,
        },
      ],
    },
  ],
  "entityPositions": Map {
    "top" => {
      "height": 5,
      "width": 10,
      "x": 0,
      "y": 0,
    },
    "bot" => {
      "height": 5,
      "width": 10,
      "x": 0,
      "y": 7,
    },
    "mid" => {
      "height": 5,
      "width": 10,
      "x": 0,
      "y": 14,
    },
    "x" => {
      "height": 6,
      "width": 14,
      "x": 12,
      "y": 0,
    },
    "y" => {
      "height": 6,
      "width": 14,
      "x": 12,
      "y": 7,
    },
  },
  "ir": {
    "entities": [
      {
        "columns": [
          {
            "name": "id",
            "pk": false,
            "type": "int",
          },
        ],
        "name": "top",
      },
      {
        "columns": [
          {
            "name": "id",
            "pk": false,
            "type": "int",
          },
        ],
        "name": "mid",
      },
      {
        "columns": [
          {
            "name": "id",
            "pk": false,
            "type": "int",
          },
        ],
        "name": "bot",
      },
      {
        "columns": [
          {
            "name": "id",
            "pk": false,
            "type": "int",
          },
          {
            "name": "top_id",
            "pk": false,
            "type": "int",
          },
        ],
        "name": "x",
      },
      {
        "columns": [
          {
            "name": "id",
            "pk": false,
            "type": "int",
          },
          {
            "name": "bot_id",
            "pk": false,
            "type": "int",
          },
        ],
        "name": "y",
      },
    ],
    "hints": {
      "clusters": [],
      "pins": [],
      "ranks": [],
    },
    "refs": [
      {
        "cardinality": "one-to-many",
        "child": {
          "column": "top_id",
          "entity": "x",
        },
        "parent": {
          "column": "id",
          "entity": "top",
        },
      },
      {
        "cardinality": "one-to-many",
        "child": {
          "column": "bot_id",
          "entity": "y",
        },
        "parent": {
          "column": "id",
          "entity": "bot",
        },
      },
    ],
  },
  "placements": [
    {
      "colStrip": 0,
      "entity": "top",
      "rowStrip": 0,
    },
    {
      "colStrip": 0,
      "entity": "bot",
      "rowStrip": 1,
    },
    {
      "colStrip": 0,
      "entity": "mid",
      "rowStrip": 2,
    },
    {
      "colStrip": 1,
      "entity": "x",
      "rowStrip": 0,
    },
    {
      "colStrip": 1,
      "entity": "y",
      "rowStrip": 1,
    },
  ],
  "sizing": {
    "channelColWidths": [
      2,
    ],
    "channelRowHeights": [
      1,
      1,
    ],
    "colStripWidths": [
      10,
      14,
    ],
    "rowStripHeights": [
      6,
      6,
      5,
    ],
  },
  "skippedRefs": [],
}
`;

exports[`layout snapshots > branching-children 1`] = `
{
  "edges": [
    {
      "childPort": {
        "side": "left",
        "x": 12,
        "y": 4,
      },
      "parentPort": {
        "side": "right",
        "x": 9,
        "y": 10,
      },
      "ref": {
        "cardinality": "one-to-many",
        "child": {
          "column": "user_id",
          "entity": "posts",
        },
        "parent": {
          "column": "id",
          "entity": "users",
        },
      },
      "segments": [
        {
          "kind": "horizontal",
          "x1": 10,
          "x2": 10,
          "y1": 10,
          "y2": 10,
        },
        {
          "kind": "vertical",
          "x1": 10,
          "x2": 10,
          "y1": 10,
          "y2": 4,
        },
        {
          "kind": "horizontal",
          "x1": 10,
          "x2": 11,
          "y1": 4,
          "y2": 4,
        },
      ],
    },
    {
      "childPort": {
        "side": "left",
        "x": 12,
        "y": 11,
      },
      "parentPort": {
        "side": "right",
        "x": 9,
        "y": 10,
      },
      "ref": {
        "cardinality": "one-to-many",
        "child": {
          "column": "user_id",
          "entity": "sessions",
        },
        "parent": {
          "column": "id",
          "entity": "users",
        },
      },
      "segments": [
        {
          "kind": "horizontal",
          "x1": 10,
          "x2": 11,
          "y1": 10,
          "y2": 10,
        },
        {
          "kind": "vertical",
          "x1": 11,
          "x2": 11,
          "y1": 10,
          "y2": 11,
        },
        {
          "kind": "horizontal",
          "x1": 11,
          "x2": 11,
          "y1": 11,
          "y2": 11,
        },
      ],
    },
  ],
  "entityPositions": Map {
    "users" => {
      "height": 5,
      "width": 10,
      "x": 0,
      "y": 7,
    },
    "posts" => {
      "height": 6,
      "width": 15,
      "x": 12,
      "y": 0,
    },
    "sessions" => {
      "height": 6,
      "width": 15,
      "x": 12,
      "y": 7,
    },
  },
  "ir": {
    "entities": [
      {
        "columns": [
          {
            "name": "id",
            "pk": true,
            "type": "int",
          },
        ],
        "name": "users",
      },
      {
        "columns": [
          {
            "name": "id",
            "pk": true,
            "type": "int",
          },
          {
            "name": "user_id",
            "pk": false,
            "type": "int",
          },
        ],
        "name": "posts",
      },
      {
        "columns": [
          {
            "name": "id",
            "pk": true,
            "type": "int",
          },
          {
            "name": "user_id",
            "pk": false,
            "type": "int",
          },
        ],
        "name": "sessions",
      },
    ],
    "hints": {
      "clusters": [],
      "pins": [],
      "ranks": [],
    },
    "refs": [
      {
        "cardinality": "one-to-many",
        "child": {
          "column": "user_id",
          "entity": "posts",
        },
        "parent": {
          "column": "id",
          "entity": "users",
        },
      },
      {
        "cardinality": "one-to-many",
        "child": {
          "column": "user_id",
          "entity": "sessions",
        },
        "parent": {
          "column": "id",
          "entity": "users",
        },
      },
    ],
  },
  "placements": [
    {
      "colStrip": 0,
      "entity": "users",
      "rowStrip": 1,
    },
    {
      "colStrip": 1,
      "entity": "posts",
      "rowStrip": 0,
    },
    {
      "colStrip": 1,
      "entity": "sessions",
      "rowStrip": 1,
    },
  ],
  "sizing": {
    "channelColWidths": [
      2,
    ],
    "channelRowHeights": [
      1,
    ],
    "colStripWidths": [
      10,
      15,
    ],
    "rowStripHeights": [
      6,
      6,
    ],
  },
  "skippedRefs": [],
}
`;

exports[`layout snapshots > diamond 1`] = `
{
  "edges": [
    {
      "childPort": {
        "side": "left",
        "x": 12,
        "y": 4,
      },
      "parentPort": {
        "side": "right",
        "x": 9,
        "y": 3,
      },
      "ref": {
        "cardinality": "one-to-many",
        "child": {
          "column": "a_id",
          "entity": "b",
        },
        "parent": {
          "column": "id",
          "entity": "a",
        },
      },
      "segments": [
        {
          "kind": "horizontal",
          "x1": 10,
          "x2": 10,
          "y1": 3,
          "y2": 3,
        },
        {
          "kind": "vertical",
          "x1": 10,
          "x2": 10,
          "y1": 3,
          "y2": 4,
        },
        {
          "kind": "horizontal",
          "x1": 10,
          "x2": 11,
          "y1": 4,
          "y2": 4,
        },
      ],
    },
    {
      "childPort": {
        "side": "left",
        "x": 26,
        "y": 5,
      },
      "parentPort": {
        "side": "right",
        "x": 23,
        "y": 3,
      },
      "ref": {
        "cardinality": "one-to-many",
        "child": {
          "column": "b_id",
          "entity": "c",
        },
        "parent": {
          "column": "id",
          "entity": "b",
        },
      },
      "segments": [
        {
          "kind": "horizontal",
          "x1": 24,
          "x2": 24,
          "y1": 3,
          "y2": 3,
        },
        {
          "kind": "vertical",
          "x1": 24,
          "x2": 24,
          "y1": 3,
          "y2": 5,
        },
        {
          "kind": "horizontal",
          "x1": 24,
          "x2": 25,
          "y1": 5,
          "y2": 5,
        },
      ],
    },
  ],
  "entityPositions": Map {
    "a" => {
      "height": 5,
      "width": 10,
      "x": 0,
      "y": 0,
    },
    "b" => {
      "height": 6,
      "width": 12,
      "x": 12,
      "y": 0,
    },
    "c" => {
      "height": 7,
      "width": 12,
      "x": 26,
      "y": 0,
    },
  },
  "ir": {
    "entities": [
      {
        "columns": [
          {
            "name": "id",
            "pk": true,
            "type": "int",
          },
        ],
        "name": "a",
      },
      {
        "columns": [
          {
            "name": "id",
            "pk": true,
            "type": "int",
          },
          {
            "name": "a_id",
            "pk": false,
            "type": "int",
          },
        ],
        "name": "b",
      },
      {
        "columns": [
          {
            "name": "id",
            "pk": true,
            "type": "int",
          },
          {
            "name": "a_id",
            "pk": false,
            "type": "int",
          },
          {
            "name": "b_id",
            "pk": false,
            "type": "int",
          },
        ],
        "name": "c",
      },
    ],
    "hints": {
      "clusters": [],
      "pins": [],
      "ranks": [],
    },
    "refs": [
      {
        "cardinality": "one-to-many",
        "child": {
          "column": "a_id",
          "entity": "b",
        },
        "parent": {
          "column": "id",
          "entity": "a",
        },
      },
      {
        "cardinality": "one-to-many",
        "child": {
          "column": "a_id",
          "entity": "c",
        },
        "parent": {
          "column": "id",
          "entity": "a",
        },
      },
      {
        "cardinality": "one-to-many",
        "child": {
          "column": "b_id",
          "entity": "c",
        },
        "parent": {
          "column": "id",
          "entity": "b",
        },
      },
    ],
  },
  "placements": [
    {
      "colStrip": 0,
      "entity": "a",
      "rowStrip": 0,
    },
    {
      "colStrip": 1,
      "entity": "b",
      "rowStrip": 0,
    },
    {
      "colStrip": 2,
      "entity": "c",
      "rowStrip": 0,
    },
  ],
  "sizing": {
    "channelColWidths": [
      2,
      2,
    ],
    "channelRowHeights": [],
    "colStripWidths": [
      10,
      12,
      12,
    ],
    "rowStripHeights": [
      7,
    ],
  },
  "skippedRefs": [
    {
      "cardinality": "one-to-many",
      "child": {
        "column": "a_id",
        "entity": "c",
      },
      "parent": {
        "column": "id",
        "entity": "a",
      },
    },
  ],
}
`;

exports[`layout snapshots > junction-table 1`] = `
{
  "edges": [
    {
      "childPort": {
        "side": "left",
        "x": 18,
        "y": 10,
      },
      "parentPort": {
        "side": "right",
        "x": 15,
        "y": 10,
      },
      "ref": {
        "cardinality": "one-to-many",
        "child": {
          "column": "user_id",
          "entity": "memberships",
        },
        "parent": {
          "column": "id",
          "entity": "users",
        },
      },
      "segments": [
        {
          "kind": "horizontal",
          "x1": 16,
          "x2": 17,
          "y1": 10,
          "y2": 10,
        },
      ],
    },
    {
      "childPort": {
        "side": "left",
        "x": 18,
        "y": 11,
      },
      "parentPort": {
        "side": "right",
        "x": 15,
        "y": 3,
      },
      "ref": {
        "cardinality": "one-to-many",
        "child": {
          "column": "group_id",
          "entity": "memberships",
        },
        "parent": {
          "column": "id",
          "entity": "groups",
        },
      },
      "segments": [
        {
          "kind": "horizontal",
          "x1": 16,
          "x2": 16,
          "y1": 3,
          "y2": 3,
        },
        {
          "kind": "vertical",
          "x1": 16,
          "x2": 16,
          "y1": 3,
          "y2": 11,
        },
        {
          "kind": "horizontal",
          "x1": 16,
          "x2": 17,
          "y1": 11,
          "y2": 11,
        },
      ],
    },
  ],
  "entityPositions": Map {
    "groups" => {
      "height": 6,
      "width": 16,
      "x": 0,
      "y": 0,
    },
    "users" => {
      "height": 6,
      "width": 16,
      "x": 0,
      "y": 7,
    },
    "memberships" => {
      "height": 6,
      "width": 16,
      "x": 18,
      "y": 7,
    },
  },
  "ir": {
    "entities": [
      {
        "columns": [
          {
            "name": "id",
            "pk": true,
            "type": "int",
          },
          {
            "name": "name",
            "pk": false,
            "type": "varchar",
          },
        ],
        "name": "users",
      },
      {
        "columns": [
          {
            "name": "id",
            "pk": true,
            "type": "int",
          },
          {
            "name": "name",
            "pk": false,
            "type": "varchar",
          },
        ],
        "name": "groups",
      },
      {
        "columns": [
          {
            "name": "user_id",
            "pk": false,
            "type": "int",
          },
          {
            "name": "group_id",
            "pk": false,
            "type": "int",
          },
        ],
        "name": "memberships",
      },
    ],
    "hints": {
      "clusters": [],
      "pins": [],
      "ranks": [],
    },
    "refs": [
      {
        "cardinality": "one-to-many",
        "child": {
          "column": "user_id",
          "entity": "memberships",
        },
        "parent": {
          "column": "id",
          "entity": "users",
        },
      },
      {
        "cardinality": "one-to-many",
        "child": {
          "column": "group_id",
          "entity": "memberships",
        },
        "parent": {
          "column": "id",
          "entity": "groups",
        },
      },
    ],
  },
  "placements": [
    {
      "colStrip": 0,
      "entity": "groups",
      "rowStrip": 0,
    },
    {
      "colStrip": 0,
      "entity": "users",
      "rowStrip": 1,
    },
    {
      "colStrip": 1,
      "entity": "memberships",
      "rowStrip": 1,
    },
  ],
  "sizing": {
    "channelColWidths": [
      2,
    ],
    "channelRowHeights": [
      1,
    ],
    "colStripWidths": [
      16,
      16,
    ],
    "rowStripHeights": [
      6,
      6,
    ],
  },
  "skippedRefs": [],
}
`;

exports[`layout snapshots > linear-chain 1`] = `
{
  "edges": [
    {
      "childPort": {
        "side": "left",
        "x": 12,
        "y": 4,
      },
      "parentPort": {
        "side": "right",
        "x": 9,
        "y": 3,
      },
      "ref": {
        "cardinality": "one-to-many",
        "child": {
          "column": "user_id",
          "entity": "posts",
        },
        "parent": {
          "column": "id",
          "entity": "users",
        },
      },
      "segments": [
        {
          "kind": "horizontal",
          "x1": 10,
          "x2": 10,
          "y1": 3,
          "y2": 3,
        },
        {
          "kind": "vertical",
          "x1": 10,
          "x2": 10,
          "y1": 3,
          "y2": 4,
        },
        {
          "kind": "horizontal",
          "x1": 10,
          "x2": 11,
          "y1": 4,
          "y2": 4,
        },
      ],
    },
    {
      "childPort": {
        "side": "left",
        "x": 29,
        "y": 4,
      },
      "parentPort": {
        "side": "right",
        "x": 26,
        "y": 3,
      },
      "ref": {
        "cardinality": "one-to-many",
        "child": {
          "column": "post_id",
          "entity": "comments",
        },
        "parent": {
          "column": "id",
          "entity": "posts",
        },
      },
      "segments": [
        {
          "kind": "horizontal",
          "x1": 27,
          "x2": 27,
          "y1": 3,
          "y2": 3,
        },
        {
          "kind": "vertical",
          "x1": 27,
          "x2": 27,
          "y1": 3,
          "y2": 4,
        },
        {
          "kind": "horizontal",
          "x1": 27,
          "x2": 28,
          "y1": 4,
          "y2": 4,
        },
      ],
    },
  ],
  "entityPositions": Map {
    "users" => {
      "height": 5,
      "width": 10,
      "x": 0,
      "y": 0,
    },
    "posts" => {
      "height": 6,
      "width": 15,
      "x": 12,
      "y": 0,
    },
    "comments" => {
      "height": 6,
      "width": 15,
      "x": 29,
      "y": 0,
    },
  },
  "ir": {
    "entities": [
      {
        "columns": [
          {
            "name": "id",
            "pk": true,
            "type": "int",
          },
        ],
        "name": "users",
      },
      {
        "columns": [
          {
            "name": "id",
            "pk": true,
            "type": "int",
          },
          {
            "name": "user_id",
            "pk": false,
            "type": "int",
          },
        ],
        "name": "posts",
      },
      {
        "columns": [
          {
            "name": "id",
            "pk": true,
            "type": "int",
          },
          {
            "name": "post_id",
            "pk": false,
            "type": "int",
          },
        ],
        "name": "comments",
      },
    ],
    "hints": {
      "clusters": [],
      "pins": [],
      "ranks": [],
    },
    "refs": [
      {
        "cardinality": "one-to-many",
        "child": {
          "column": "user_id",
          "entity": "posts",
        },
        "parent": {
          "column": "id",
          "entity": "users",
        },
      },
      {
        "cardinality": "one-to-many",
        "child": {
          "column": "post_id",
          "entity": "comments",
        },
        "parent": {
          "column": "id",
          "entity": "posts",
        },
      },
    ],
  },
  "placements": [
    {
      "colStrip": 0,
      "entity": "users",
      "rowStrip": 0,
    },
    {
      "colStrip": 1,
      "entity": "posts",
      "rowStrip": 0,
    },
    {
      "colStrip": 2,
      "entity": "comments",
      "rowStrip": 0,
    },
  ],
  "sizing": {
    "channelColWidths": [
      2,
      2,
    ],
    "channelRowHeights": [],
    "colStripWidths": [
      10,
      15,
      15,
    ],
    "rowStripHeights": [
      6,
    ],
  },
  "skippedRefs": [],
}
`;

exports[`layout snapshots > single-table 1`] = `
{
  "edges": [],
  "entityPositions": Map {
    "users" => {
      "height": 6,
      "width": 17,
      "x": 0,
      "y": 0,
    },
  },
  "ir": {
    "entities": [
      {
        "columns": [
          {
            "name": "id",
            "pk": true,
            "type": "int",
          },
          {
            "name": "email",
            "pk": false,
            "type": "varchar",
          },
        ],
        "name": "users",
      },
    ],
    "hints": {
      "clusters": [],
      "pins": [],
      "ranks": [],
    },
    "refs": [],
  },
  "placements": [
    {
      "colStrip": 0,
      "entity": "users",
      "rowStrip": 0,
    },
  ],
  "sizing": {
    "channelColWidths": [],
    "channelRowHeights": [],
    "colStripWidths": [
      17,
    ],
    "rowStripHeights": [
      6,
    ],
  },
  "skippedRefs": [],
}
`;
